Bug 105602 - Extended help does not work in GtkToolButton items if the property "action_name" is set
Summary: Extended help does not work in GtkToolButton items if the property "action_na...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.0.1
Keywords:
Depends on:
Blocks: Toolbars-Tooltips
  Show dependency treegraph
 
Reported: 2017-01-29 22:13 UTC by Gabor Kelemen (Collabora)
Modified: 2018-12-19 20:13 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the problem in Calc side pane, help debug mode (92.82 KB, image/png)
2017-01-29 22:13 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the problem in the Spelling and Grammar dialog, help debug mode (28.06 KB, image/png)
2017-01-29 22:14 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2017-01-29 22:13:36 UTC
Created attachment 130753 [details]
Screenshot of the problem in Calc side pane, help debug mode

I noticed that since the Writer[1] and Calc[2] Navigator side pane conversion to .ui format the extended help stopped working on the tool buttons at the top of these side panes.

The help content was correctly updated with bookmark and ahelp ids after the conversion, so I continued looking for other explanations.

I think the problem is that these items have the action_name property set, which overrides the default "modules/swriter/ui/navigatorpanel/something" style help id to just the value in the action_name. I wonder if this is intentional?

Now I think one way to go could be to modify the help ids in helpcontent, but the problem with this approach is that the short command names are not unique between help files - for example we have a "dragmode" command in Writer, Calc and Impress and they mean different things by looking at the help.

A better ways would be to somehow preserve the default style help ids.


This problem is not specific to the Navigator side panes, I see this happening in the Spelling and Grammar dialog[3] and in the Templates dialog[4] too.

[1] https://cgit.freedesktop.org/libreoffice/core/commit/?id=33603a582bdd173a8e85c78bb0e8ef82874b8e59
[2] https://cgit.freedesktop.org/libreoffice/core/commit/?id=141a4ac1d21121a4e46470c797c6fce741151fee
[3] https://cgit.freedesktop.org/libreoffice/core/tree/cui/uiconfig/ui/spellingdialog.ui#n382
[4] https://cgit.freedesktop.org/libreoffice/core/tree/sfx2/uiconfig/ui/templatedlg.ui#n309
Comment 1 Gabor Kelemen (Collabora) 2017-01-29 22:14:28 UTC
Created attachment 130754 [details]
Screenshot of the problem in the Spelling and Grammar dialog, help debug mode
Comment 2 Xisco Faulí 2018-06-12 10:48:52 UTC
Hi Gabor,
Could you please explain how to display that ToolButton?

OTOH, Do you still reproduce it on master ?
Comment 3 Gabor Kelemen (Collabora) 2018-06-20 20:38:32 UTC
(In reply to Xisco Faulí from comment #2)
> Hi Gabor,
> Could you please explain how to display that ToolButton?
> 
> OTOH, Do you still reproduce it on master ?

Hi

2, Yes I still see it.

1, I'm not sure I understand the question. You can read in the .ui files these objects with the shortened HID are GtkToolButton objects, this is the common pattern here: 
<object class="GtkToolButton" id="paste"> (at code pointer [3] in comment#1)

Displaying the actual HID of the items? See here:
 
https://wiki.documentfoundation.org/Documentation/Understanding,_Authoring_and_Editing_Openoffice.org_Help/4#Determining_A_Help_ID 

You need to export HELP_DEBUG=TRUE in ~/.bashrc and restart your environment to show them in the extended tip bubble.
Comment 4 Buovjaga 2018-06-25 18:16:11 UTC
(In reply to Gabor Kelemen from comment #3)
> You need to export HELP_DEBUG=TRUE in ~/.bashrc and restart your environment
> to show them in the extended tip bubble.

Or just launch from command line with
HELP_DEBUG=TRUE libreoffice

I enable extended tooltips in tools - options - libreoffice - general and I see the same result as in the screenshot.

Arch Linux 64-bit
Version: 6.2.0.0.alpha0+
Build ID: dbfa1c452fd9d02330cb3ec5bf2fd4f2c7782d1a
CPU threads: 8; OS: Linux 4.17; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group threaded
Built on June 25th 2018
Comment 5 Roman Kuznetsov 2018-12-13 10:52:10 UTC
Caolan, may be you will be interested?
Comment 6 Commit Notification 2018-12-19 15:11:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/429f80910484079e4ef10ca904710e40a14ed3c4%5E%21

Resolves: tdf#105602 fix extended help for non-dispatchable toolbox commands

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2018-12-19 16:33:02 UTC
backport to 6-2 in gerrit
Comment 8 Commit Notification 2018-12-19 20:13:53 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/454f6c11ec85dcbea849d3288963db632c90ff3f%5E%21

Resolves: tdf#105602 fix extended help for non-dispatchable toolbox commands

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.