Resolves: tdf#105602 fix extended help for non-dispatchable toolbox commands

Change-Id: I832a043ca5ae3a4030b9ac22447cecfabd3650c0